@@ -1,3 +1,10 @@
+2009-07-09  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Build fix.
+
+        * inspector/JavaScriptDebugServer.cpp:
+        (WebCore::JavaScriptDebugServer::setJavaScriptPaused):
+
 2009-07-09  Beth Dakin and Jon Honeycutt <bdakin@apple.com>
 
         Reviewed by Dave Hyatt.
